fix rest response exception